--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,5 @@ allprojects {
     }
 }
 dependencies {
-    //implementation 'com.github.tg-monitor:backend:86387afc00af800276d5ad094251c1f294a7d9ac'
-    compile files('../backend/build/libs/backend-0.0.1.jar')
-    compile files('../monitor/build/libs/monitor-0.0.1.jar')
-
+    implementation 'com.github.tg-monitor:backend:c954bcdeb8863610513cf70c1e4a594eefa6bca7'
 }
