Log output (debugging)

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ allprojects {
     }
 }
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 dependencies {
     implementation 'com.github.tg-monitor:backend:master-SNAPSHOT'
 }
