--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,5 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'com.github.tg-monitor:backend:master-SNAPSHOT'
+    implementation 'com.github.tg-monitor:backend:0.0.1'
 }
