Add all internal dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,9 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'com.github.tg-monitor:backend:0.0.1'
+    implementation 'com.github.tg-monitor:backend:0.0.2'
+    implementation 'com.github.tg-monitor:monitor:0.0.2'
+    implementation 'com.github.tg-monitor:entities:0.0.1'
+
+
 }
