Change dependencies to new names

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'com.github.tg-monitor:backend:0.0.3'
-    implementation 'com.github.tg-monitor:monitor:0.0.3'
-    implementation 'com.github.tg-monitor:entities:0.0.1'
+    implementation 'com.github.tg-monitor:tgm-backend:0.0.3'
+    implementation 'com.github.tg-monitor:tgm-monitor:0.0.3'
+    implementation 'com.github.tg-monitor:tgm-entities:0.0.1'
+    implementation 'com.github.tg-monitor:tgm-servicelocator:0.0.1'
 }
