Make LoginCodePrompt param to login() method
This makes the LoginCodePromptLocator obsolete.

--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'com.github.tg-monitor:tgm-backend:0.0.4'
-    implementation 'com.github.tg-monitor:tgm-monitor:0.0.4'
+    implementation 'com.github.tg-monitor:tgm-backend:master-SNAPSHOT'
+    implementation 'com.github.tg-monitor:tgm-monitor:master-SNAPSHOT'
     implementation 'com.github.tg-monitor:tgm-entities:0.0.2'
     implementation 'com.github.tg-monitor:tgm-servicelocator:0.0.1'
 }
