Use LoginCodePrompt from new separate component

--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.github.tg-monitor:tgm-backend:master-SNAPSHOT'
     implementation 'com.github.tg-monitor:tgm-monitor:master-SNAPSHOT'
     implementation 'com.github.tg-monitor:tgm-entities:0.0.2'
+    implementation 'com.github.tg-monitor:tgm-logincodeprompt:0.0.1'
     implementation 'com.github.tg-monitor:tgm-servicelocator:0.0.1'
 }
